ci: fix deployment

--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -29,9 +29,12 @@ jobs:
             - name: Build project
               run: npm run build
 
+            - name: Prepare build folder
+              run: cp -r build build_deploy
+
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v4
               if: github.ref == 'refs/heads/main'
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ./build
+                  publish_dir: ./build_deploy
