--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -27,14 +27,11 @@ jobs:
               run: npm ci
 
             - name: Build project
-              run: npm run build
-
-            - name: Prepare build folder
-              run: cp -r build build_deploy
+              run: npm run build-dist
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v4
               if: github.ref == 'refs/heads/main'
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ./build_deploy
+                  publish_dir: ./dist
